# mlx-lora-finetuner

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md
.github/: dependabot.yml  (+1 more)
backend/: .env.example  pyproject.toml
backend/app/: cli.py  config.py  deps.py  main.py
backend/app/api/: arena.py  datasets.py  export.py  history.py  inference.py  models.py  recipes.py  reward_files.py  system.py  training.py
backend/app/core/: errors.py  paths.py  process.py  ws.py
backend/app/db/: database.py  repositories.py
backend/app/schemas/: arena.py  datasets.py  events.py  export.py  inference.py  models.py  training.py
backend/app/services/: arena_service.py  config_yaml.py  dataset_import_service.py  dataset_service.py  export_service.py  inference_service.py  model_registry.py  recipe_service.py  reward_files_service.py
backend/app/templates/ollama/: custom.j2  llama.j2  mistral.j2  smollm.j2
backend/app/training/: events.py  manager.py  presets.py  worker.py
backend/tests/: conftest.py
backend/tests/fixtures/: fake_worker.py  training_helpers.py
backend/tests/fixtures/datasets/: chat_broken.jsonl  chat_valid.jsonl  completions_broken.jsonl  completions_valid.jsonl  dpo_broken.jsonl  dpo_valid.jsonl  ftpo_broken.jsonl  ftpo_valid.jsonl  grpo_broken.jsonl  grpo_valid.jsonl  mixed_garbage.jsonl  not_jsonl.txt  orpo_broken.jsonl  orpo_valid.jsonl  text_broken.jsonl  text_valid.jsonl
backend/tests/integration/: test_arena_api.py  test_config_yaml_api.py  test_dataset_import_api.py  test_datasets_api.py  test_error_shape.py  test_export_api.py  test_history_api.py  test_inference_api.py  test_models_api.py  test_recipes_api.py  test_reward_files_api.py  test_static_frontend.py  test_stub_routes.py  test_system_api.py  test_training_api.py  test_training_ws.py
backend/tests/unit/: test_arena_service.py  test_cli.py  test_config_yaml.py  test_dataset_service.py  test_db.py  test_export_service.py  test_inference_service.py  test_paths.py  test_recipe_service.py  test_reward_files_service.py  test_schemas.py  test_startup_reap.py  test_training_manager.py  test_training_presets.py  test_training_worker.py
(+225 files in other folders)
