[project]
name = "mlx-lora-finetuner-backend"
version = "0.1.0"
description = "MLX ile LoRA fine-tuning yapan uygulamanın FastAPI backend'i"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic>=2",
    "pydantic-settings",
    "aiosqlite",
    "huggingface_hub",
    "psutil",
    "jinja2",
    "python-multipart",
    "pypdf",
    "python-docx",
    "datasets",
]

[project.optional-dependencies]
mlx = [
    "mlx-lm-lora==3.0.0",
    "mlx-lm==0.31.3",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
