[project]
name = "mlx-lora-finetuner-backend"
version = "0.2.0"
description = "MLX ile LoRA fine-tuning yapan uygulamanın FastAPI backend'i"
requires-python = ">=3.11"
# Bounds policy: lower bound = the minor we develop/lock against, upper
# bound = the next major, so a `uv lock` refresh fails loudly instead of
# silently pulling a breaking major (the mlx extra stays pinned exactly).
dependencies = [
    "fastapi>=0.139.2,<1",
    "uvicorn[standard]>=0.51,<1",
    "pydantic>=2.13,<3",
    "pydantic-settings>=2.14,<3",
    "aiosqlite>=0.22,<1",
    "huggingface_hub>=1.23,<2",
    "psutil>=7.2,<8",
    "jinja2>=3.1,<4",
    "python-multipart>=0.0.32,<1",
    "pypdf>=6.14,<7",
    "python-docx>=1.2,<2",
    "datasets>=5.0,<6",
    "pyyaml>=6.0,<7",
]

[project.scripts]
mlxlf = "app.cli:main"

[project.optional-dependencies]
mlx = [
    "mlx-lm-lora==3.0.0",
    "mlx-lm==0.31.3",
]

[dependency-groups]
dev = [
    "pytest>=9.1,<10",
    "pytest-asyncio>=1.4,<2",
    "httpx>=0.28,<1",
    "ruff>=0.15,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
